# ai-review-manager

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
docs/plans/: 2026-02-04-ai-review-mvp-design.md  2026-02-04-ai-review-mvp-implementation.md
logs/prompts/: 20260205_152200_mr5_src_export_export.controller.ts.txt  20260205_152229_mr5_src_export_export.module.ts.txt  20260205_152239_mr5_src_export_export.service.ts.txt  20260205_152330_mr5_src_app.module.ts.txt  20260205_154146_mr5.txt  20260205_155228_mr5.txt  20260205_155328_mr5.txt  20260205_155509_mr5.txt  20260205_155928_mr5.txt  20260205_160801_mr5.txt  20260205_161515_mr5.txt  20260205_164147_mr95.txt
src/ai_review/: config.py  main.py
src/ai_review/models/: __init__.py  config.py  review.py  webhook.py
src/ai_review/providers/: __init__.py  base.py  gemini.py  yandex.py
src/ai_review/review/: __init__.py  engine.py  parser.py  prompts.py
tests/: test_config.py  test_engine.py  test_gitlab_client.py  test_health.py  test_models.py  test_providers.py  test_webhook.py  test_yandex_provider.py
tests/e2e/: conftest.py  test_real_providers.py
tests/integration/: conftest.py  test_api_review.py  test_gitlab_client.py  test_providers.py  test_webhook.py  test_yandex_provider.py
tests/unit/: conftest.py  test_parser.py  test_prompts.py  test_providers_base.py
